<resources>
    <string name="app_name">ChitChat</string>
    <string name="admob_ad_unit">ca-app-pub-5100425050048880/3458555452</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_app_name">ChitChat Messenger</string>
    <string name="version">Version 2.17.146</string>
    <string name="copyright">c 2010–2017 ChitChat Inc.</string>
    <string name="rights_reserved">All rights reserved.</string>
    <string name="licenses">LICENCES</string>
    <string name="send">SEND</string>
    <string name="about_and_help">About and Help</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="chat_settings">Chat settings</string>
    <string name="notif">Notifications</string>
    <string name="about">About and help</string>
    <string name="appInfo">App Info</string>
    <string name="help">Help</string>
    <string name="account">Account</string>
    <string name="imageTransition">Image Transition</string>
    <string name="fag">FAQ</string>
    <string name="data">Data usage</string>
    <string name="contacts">Contacts</string>
    <string name="contact_us">Contact us</string>
    <string name="terms">Terms and Privacy Policy</string>
    <string name="license">Licenses</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="two_step">Two-Step Verification</string>
    <string name="change_num">Change number</string>
    <string name="need_help">Questions? Need help?</string>
    <string name="delete_account">Delete my account</string>
    <string name="system_status">System Status</string>
    <string name="search_">Search…</string>
    <string name="label_error_incorrect_phone">Incorrect phone</string>
    <string name="search">Search</string>
    <string name="media">Media</string>
    <string name="clear_chat">Clear chat</string>
    <string name="email_chat">Email chat</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="view_contact">View Contact</string>
    <string name="new_chat">New chat</string>
    <string name="new_call">New call</string>
    <string name="call_info">Call Info</string>
    <string name="new_group">New group</string>
    <string name="new_contact">New contact</string>
    <string name="new_broadcast">New broadcast</string>
    <string name="web">Chatup Web</string>
    <string name="add_contact">Add Contact</string>
    <string name="starred">Starred messages</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="block">Block</string>
    <string name="remove_call_log">Remove from call log</string>
    <string name="clear">Clear call log</string>
    <string name="status_privacy">Status Privacy</string>
    <string name="chat">Chat</string>
    <string name="refresh">Refresh</string>
    <string name="invite">INVITE</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="address_book">View in address book</string>
    <string name="security_code">Verify security code</string>
    <string name="none_selected">None selected</string>
    <string name="back_up_over">Back up over</string>
    <string name="mobile">Mobile</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="chat_backup">Chat backup</string>
    <string name="chat_history">Chat history</string>
    <string name="starred_text">Tap and hold on any message in any chat to star it, so you can easily find it later.</string>
    <string name="encrypt">Encryption</string>
    <string name="encrypt_text">Message you send to this chat and calls are secured with end-to-end encryption. Tap to verify.</string>
    <string name="conver_tones">Conversation tones</string>
    <string name="message_notif">Message notifications</string>
    <string name="notif_tone">Notification tone</string>
    <string name="contact_tone">Contact ringtone</string>
    <string name="groups_notif">Group notifications</string>
    <string name="call_notif">Call notifications</string>
    <string name="ringtone">Ringtone</string>
    <string name="play_sounds">Play sounds for incoming and outgoing messages</string>
    <string name="default_tone">Default ringtone (Pixie Dust)</string>
    <string name="default_text">Default</string>
    <string name="only_when_on">Only when screen "on"</string>
    <string name="no_popup">No popup</string>
    <string name="not_available">Not available. Set custom notifications by tapping the name at the of a chat.</string>
    <string name="network_usage">Network usage</string>
    <string name="auto_download">Media auto-download</string>
    <string name="when_using_mobile">When using mobile data</string>
    <string name="when_using_wifi">When connected on Wi-Fi</string>
    <string name="when_roaming">When roaming</string>
    <string name="data_note">NOTE: Voice messages are always automatically downloaded for the best communication experience</string>
    <string name="call_settings">Call settings</string>
    <string name="low_data">Low data usage</string>
    <string name="low_data_mess">Lower the amount of data used during a Chatup call</string>
    <string name="images">Images</string>
    <string name="all_media">All media</string>
    <string name="no_media">No media</string>
    <string name="invite_friend">Invite a friend</string>
    <string name="show_contacts">Show all contacts</string>
    <string name="enable_hidden_contacts">Enable to also use hidden contacts</string>
    <string name="text1">Changing you phone number will migrate your account info, groups, and settings.</string>
    <string name="text2">Before proceeding, please confirm that you are able to receive SMS or calls at your new number.</string>
    <string name="text3">If you have both a new phone and a new number, first cchange your number on your old phone.</string>
    <string name="last_backup">Last BackUp</string>
    <string name="backup">BACK UP</string>
    <string name="local">Local: 20:20</string>
    <string name="google_drive">Google Drive: Never</string>
    <string name="size">Size: 99MB</string>
    <string name="backup_mess">Back up your messages and media to Google Drive. You can restore them when you reinstall ChatUp. Your messages and media will also back up to your phones SD card.</string>
    <string name="google_drive_settings">Google Drive Settings</string>
    <string name="back_up_to_google">Back up to Google Drive</string>
    <string name="backup_over">Back up over</string>
    <string name="include_videos">Include videos</string>
    <string name="wifi_cellular">Wi-fi or Cellular</string>
    <string name="wifi_only">Wi-fi</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="med_email1">ayelasites@gamil.com</string>
    <string name="med_email2">ayelaasibi@gmail.com</string>
    <string name="save_fail">Unable to save image</string>
    <string name="set_wallpaper">Set as Wallpaper</string>
    <string name="only_contacts_with">Only contacts with +233 23 300 7320 in their address book will receive your broadcast messages.</string>
    <string name="who_can_see_my">Who can see my personal info</string>
    <string name="who_can_see_status">Who can see your status updates</string>
    <string name="my_contacts">My contacts</string>
    <string name="my_contacts_except">My contacts except…</string>
    <string name="only_share_with">Only share with…</string>
    <string name="changes_wont_affect">Changes to your privacy wont affect status updates that you ve sent already</string>
    <string name="last_seen">Last seen</string>
    <string name="profile_photo">Profile photo</string>
    <string name="messaging">Messaging</string>
    <string name="blocked_contacts">Blocked contacts</string>
    <string name="read_receipts">Read receipts</string>
    <string name="everyone">Everyone</string>
    <string name="blocked_note">List of contacts that you have blocked.</string>
    <string name="status_note">If you dont share your Last Seen, you wont be able to see other peoples Last Seen</string>
    <string name="receipt_note">If you turn off read receipts, you wont be able to see read receipts from other people. Read receipts are always sent for group chats.</string>
    <string name="group_info">Group info</string>
    <string name="group_media">Group media</string>
    <string name="mute">Mute</string>
    <string name="no_upload_data">0KB to be uploaded</string>
    <string name="deleting_your_account_will">DELETING YOUR ACCOUNT WILL:</string>
    <string name="delete_your_account_from">Delete your account from ChatUp</string>
    <string name="erase_mess_history">Erase your message history</string>
    <string name="delete_you_from">Delete you from all of your ChatUp groups</string>
    <string name="change_num_instead">Want to change number instead?</string>
    <string name="to_delete_your_account">To delete your account, confirm your country code and enter your phone number.</string>
    <string name="important">IMPORTANT:</string>
    <string name="type_message">Type a message</string>
    <string name="font_size">Font size: Medium</string>
    <string name="font_mess">Font size for chat screen</string>
    <string name="enter_send">Enter is send</string>
    <string name="enter_mess">Enter key will send your message</string>
    <string name="type_c_name">Type contact name…</string>
    <string name="type_subject">Type group subject here…</string>
    <string name="group_text">Please provide group subject and optional group icon</string>
    <string name="add_broadcast">ADD BROADCAST LIST RECEIPIENTS</string>
    <string name="add_participants">ADD GROUP PARTICIPANTS</string>
    <string name="important_text">Only contacts with +233 54 406 9752 in their address book will receive your broadcast messages.</string>
    <string name="my_status">My Status</string>
    <string name="add_status">tap to add status update</string>
    <string name="med_country">Ghana</string>
    <string name="med_code">+233</string>
    <string name="med_name">Cindy Carter</string>
    <string name="med_about">Hey there!  am William Wilson. Am from Ghana. Am a Web Designer/ Developer, Android  Developer, Graphic designer etc. I am from Accra, Ghana.</string>
    <string name="med_mobile">+233 54 406 9752</string>
    <string name="not_username">This is not your username or pin. This name will be visible to your ChatUp contacts.</string>
    <string name="med_Mess">Hey bruh! this app is really good</string>
    <string name="med_date">May 30, 17:23</string>
    <string name="med_status">Hey there! I am using ChatUp.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_demo_settings">Settings</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="vibrate_notif">Vibrate</string>
    <string-array name="pref_vibrate_list_titles">
        <item>Off</item>
        <item>Default</item>
        <item>Short</item>
        <item>Long</item>
    </string-array>
    <string-array name="pref_vibrate_list_values">
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>-1</item>
    </string-array>
    <string name="popup_notif">Popup notification</string>
    <string name="light">Light</string>
</resources>