<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/contact"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/view_contact"/>
    <item
        android:id="@+id/media"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/media"/>
    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/search"/>
    <item
        android:id="@+id/mute"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/mute"/>
    <item
        android:id="@+id/wallpaper"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/wallpaper"/>
    <item
        android:id="@+id/more"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/more"/>
</menu>