<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/network_usage"/>

    <PreferenceCategory
        android:title="@string/auto_download">

        <MultiSelectListPreference
            android:entries="@array/pref_media_data_usage_titles"
            android:entryValues="@array/pref_media_data_usage_values"
            android:key="mobile_data_usage"
            android:negativeButtonText="CANCEL"
            android:positiveButtonText="OK"
            android:title="@string/when_using_mobile" />

        <MultiSelectListPreference
            android:entries="@array/pref_media_data_usage_titles"
            android:entryValues="@array/pref_media_data_usage_values"
            android:key="wifi_data_usage"
            android:negativeButtonText="CANCEL"
            android:positiveButtonText="OK"
            android:title="@string/when_using_wifi" />

        <MultiSelectListPreference
            android:entries="@array/pref_media_data_usage_titles"
            android:entryValues="@array/pref_media_data_usage_values"
            android:key="roaming_data_usage"
            android:negativeButtonText="CANCEL"
            android:positiveButtonText="OK"
            android:title="@string/when_roaming" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/data_usage_greyed_out_item" />

    <PreferenceCategory
        android:title="@string/call_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="calls_data_usage"
            android:title="@string/low_data"
            android:summary="@string/low_data_mess"/>


    </PreferenceCategory>

    <Preference
        android:enabled="false"/>
</PreferenceScreen>