<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/new_group"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/new_group"/>
    <item
        android:id="@+id/new_broadcast"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/new_broadcast"/>
    <item
        android:id="@+id/web"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/web"/>
    <item
        android:id="@+id/starred"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/starred"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/settings"/>
</menu>