<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/contact"
        android:icon="@drawable/ic_person_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/new_contact"/>
    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/status"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/status"/>
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/settings"/>
</menu>