<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/block"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/block"/>
    <item
        android:id="@+id/clear"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/clear_chat"/>
    <item
        android:id="@+id/email_chat"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/email_chat"/>
    <item
        android:id="@+id/shortcut"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/add_shortcut"/>
</menu>