<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/edit"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/edit"/>
    <item
        android:id="@+id/address_book"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/address_book"/>
    <item
        android:id="@+id/security_code"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/security_code"/>
</menu>