<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        android:textSize="14sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_drive"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_mess"
        android:textSize="15sp"
        android:layout_marginTop="20dp"/>

    <com.chatonx.chat.views.RippleView
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@color/green"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </com.chatonx.chat.views.RippleView>
</LinearLayout>